# baiby-core

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
frontend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/[id]/: page.tsx
frontend/src/app/transaction/[id]/: page.tsx
frontend/src/components/: DashboardStats.tsx  SentinelStatus.tsx  ThemeToggle.tsx  TransactionDialog.tsx  TransactionList.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts  index.ts
src/: agent.py  analysis_service.py  config.py  constants.py  core.py  main.py  orchestrator.py  persistence_service.py  state_manager.py  warning_manager.py
src/handlers/: __init__.py  api_handler.py  rpc_handler.py
src/routers/: api.py  rpc.py
src/schemas/: api.py  rpc.py
src/sentinels/: base_sentinel.py  malicious_address_sentinel.py  sentinel_one.py  sentinel_three.py  sentinel_two.py  wallet_drain_sentinel.py
