[project]
name = "baiby-core"
version = "0.1.0"
description = "baibysitter core"
authors = [
    {name = "Sebastian Camacho",email = "sxcamacho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "aioredis (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "baiby-core"
version = "0.1.0"
description = "baibysitter core"
authors = ["Sebastian Camacho <sxcamacho@gmail.com>"]
packages = [
    { include = "src" }  # Si tu código está en la carpeta src
]

